--- a/app/service/templates/service/about.html
+++ b/app/service/templates/service/about.html
@@ -2,6 +2,6 @@
 
 
 {% block content %}
-<h2>About Page</h2>
-<p>Find or offer any services. Join events you're interested in.</p>
+<h4>About Page</h4>
+<p>Society is a social platform that you can offer/request any services and join events you're interested in.</p>
 {% endblock content %}
