--- a/app/service/templates/service/event_detail.html
+++ b/app/service/templates/service/event_detail.html
@@ -10,7 +10,8 @@
             <small class="text-muted">{{ object.date_posted | date:"F d, Y"}}</small>
         </div> -->
         <h2 class="article-title">{{ object.title }}</h2>
-        <p class="article-content"> <small class="text-muted">Location: {{ object.location }} &emsp; Date: {{ object.date }}</small></p> 
+        <p class="article-content"> <small class="text-muted">Location: {{ object.location }} &emsp; Date: {{ object.date }} &emsp; Time: {{ object.time }} ({{ object.duration }} hrs)</small></p> 
+        <p class="article-content"><small class="text-muted">Current Participants: {{ object.num_participant }} / {{ object.max_participant }}</small></p>
         <p class="article-content">{{ object.content }}</p>        
         {% if object.author == user %}
         <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'event-update' object.id %}" type="submit">Update Event</a>
@@ -20,8 +21,8 @@
 
         {% if user == event.author %}
         <hr />
-            <h3>Participants</h3>
-            <hr />
+            <!-- <h3>Participants</h3>
+            <hr /> -->
             <h5>Waiting Participants</h5>
             {% for participant in event.waiting_participant.all %}
                 <p class="article-content" style="color: darkorange; font-size:small">{{participant.username}}: <a style="color:darkgreen" href="{% url 'event-action' event.id 'accept' participant.id %}">Accept</a> / <a style="color: darkred" href="{% url 'event-action' event.id 'reject' participant.id %}">Reject</a>
@@ -37,6 +38,26 @@
             <p class="article-content" style="color: darkblue; font-size:small">There is no current participant yet.</p>
             {% endfor %}
             <hr />
+
+        {% else %}
+        <hr />
+        <!-- <h3>Participants</h3>
+        <hr /> -->
+        <h5>Waiting Participants</h5>
+        {% for participant in event.waiting_participant.all %}
+            <p class="article-content" style="color: darkorange; font-size:small">{{participant.username}}: <a style="color:darkgreen" href="{% url 'event-action' event.id 'accept' participant.id %}">Accept</a> / <a style="color: darkred" href="{% url 'event-action' event.id 'reject' participant.id %}">Reject</a>
+            </p>
+        {% empty %}
+        <p class="article-content" style="color: darkblue; font-size:small">There is no waiting participant yet.</p>
+        {% endfor %}
+        <hr />
+        <h5>Current Participants</h5>
+        {% for participant in event.current_participant.all %}
+            <p class="article-content" style="color: darkorange; font-size:small">{{participant.username}} </p>
+        {% empty %}
+        <p class="article-content" style="color: darkblue; font-size:small">There is no current participant yet.</p>
+        {% endfor %}
+        <hr />
         {% endif %}
         {% if user != event.author %}
         <a href="{% url 'user-posts' event.author.username %}"><img class="rounded-circle article-img" src="{{ event.author.profile.image.url }}"></a> 
