--- a/app/service/templates/service/home.html
+++ b/app/service/templates/service/home.html
@@ -1,77 +1,88 @@
 {% extends 'service/base.html' %}
 
 {% block content %}
+{% if user.is_authenticated %}
+  {% for item in items %}
+    {% if item.get_type == "offer" %}
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title"><a class="article-title" href="{% url 'offer-detail' item.id %}">{{ item.title }}</a></h5> 
+            <p class="card-text"><small class="text-muted">Location: {{ item.location }} &emsp; Date: {{ item.date }} &emsp; Time: {{ item.time }} ({{ item.duration }} hrs)</small></p>
+            <p class="card-text">{{ item.content }}</p>
+            {% if item.author == user %}
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'offer-update' item.id %}" type="submit">Update Offer</a>
+            <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'offer-delete' item.id %}" type="submit">Delete Offer</a>
+            {% elif user.is_authenticated and user in item.waiting_participants.all %}
+            <p class="article-content" style="color: green"><small>You have already applied for this service and your application is waiting.</small> </p>
+            {% elif user.is_authenticated and user in item.current_participants.all %}
+            <p class="article-content" style="color: green"><small>You have already enrolled for this service. The offerer will be paid by timecredits after you and the offerer submit the feedback.</small></p>
+              {% if user.username not in item.feedback_senders %}
+              <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'feedback-create' item.id item.author.username %}" type="submit">Submit Feedback</a>
+              {% else %}
+              You have already submitted a feedback for this service. 
+              {% endif %}
+            {% elif user.is_authenticated and user in item.finished_participants.all %}
+            <p class="article-content" style="color: green">You already used this service and the service is now completed.</p>
+            {% elif user.is_authenticated and user.profile.timecredit < item.timecredit %}
+            <p class="article-content" style="color: red">You need at least {{item.timecredit}} timecredit, but you have {{user.profile.timecredit}} timecredit available.</p>
+            {% elif user.is_authenticated and item.num_participants >= item.max_participants %}
+            <p class="article-content" style="color: red">This offer has already reached its limit and does not accept new applications.</p>
+            {% elif user.is_authenticated %}
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'offer-apply' item.id %}" type="submit">Apply</a>
+            {% else %}
+            <p class="article-content" style="color: red">You need to login to apply for a service.</p>
+            {% endif %}
+          </div>
+        </div>
+      </div>
 
-{% for item in items %}
-  {% if item.get_type == "offer" %}
-    <div class="card-deck">
-      <div class="card">
-        <!-- <img class="card-img-top" src="{{ item.image.url }}" alt="image"> -->
-        <div class="card-body">
-          <h5 class="card-title"><a class="article-title" href="{% url 'offer-detail' item.id %}">{{ item.title }}</a></h5> 
-          <p class="card-text"><small class="text-muted">Location: {{ item.location }} &emsp; Date: {{ item.date }}</small></p>
-          <!-- <span id="dots">...</span><span id="more"></span>
-          <button onclick="myFunction()" id="myBtn">...</button> -->
-          <p class="card-text">{{ item.content }}</p>
-          {% if item.author == user %}
-          <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'offer-update' item.id %}" type="submit">Update Offer</a>
-          <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'offer-delete' item.id %}" type="submit">Delete Offer</a>
-          {% elif user.is_authenticated and user in item.waiting_participants.all %}
-          <p class="article-content" style="color: green"><small>You have already applied for this service and your application is waiting.</small> </p>
-          {% elif user.is_authenticated and user in item.current_participants.all %}
-          <p class="article-content" style="color: green"><small>You have already enrolled for this service. The author will be paid by timecredits after you and the offerer submit the feedback.</small></p>
-          {% elif user.is_authenticated %}
-          <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'offer-apply' item.id %}" type="submit">Apply</a>
-          {% else %}
-          <p class="article-content" style="color: red">You need to login to apply for a service.</p>
-          {% endif %}
+      </br>
+    {% elif item.get_type == "post" %}
+      <div class="card-deck">
+        <div class="card">
+      <!--     <img class="card-img-top" src="{{ item.image.url }}" alt="image"> -->
+          <div class="card-body">
+            <h5 class="card-title"><a class="article-title" href="{% url 'post-detail' item.id %}">{{ item.title }}</a></h5> 
+            <p class="card-text"><small class="text-muted">Location: {{ item.location }} &emsp; Date: {{ item.date }} &emsp; Time: {{ item.time }} ({{ item.duration }} hrs)</small></p>
+            <p class="card-text">{{ item.content }}</p>
+            {% if item.author == user %}
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'post-update' item.id %}" type="submit">Update Request</a>
+            <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' item.id %}" type="submit">Delete Request</a>
+            {% endif %}
+          </div>
         </div>
       </div>
-    </div>
-    </br>
-  {% elif item.get_type == "post" %}
-    <div class="card-deck">
-      <div class="card">
-    <!--     <img class="card-img-top" src="{{ item.image.url }}" alt="image"> -->
-        <div class="card-body">
-          <h5 class="card-title"><a class="article-title" href="{% url 'post-detail' item.id %}">{{ item.title }}</a></h5> 
-          <p class="card-text"><small class="text-muted">Location: {{ item.location }} &emsp; Date: {{ item.date }}</small></p>
-          <!-- <span id="dots">...</span><span id="more"></span>
-          <button onclick="myFunction()" id="myBtn">...</button> -->
-          <p class="card-text">{{ item.content }}</p>
+      </br>
+    {% elif item.get_type == "event" %}
+      <div class="card-deck">
+        <div class="card">
+      <!--     <img class="card-img-top" src="{{ post.image.url }}" alt="image"> -->
+          <div class="card-body">
+            <h5 class="card-title"><a class="article-title" href="{% url 'event-detail' item.id %}">{{ item.title }}</a></h5> 
+            <p class="card-text"><small class="text-muted">Location: {{ item.location }} &emsp; Date: {{ item.date }} &emsp; Time: {{ item.time }} ({{ item.duration }} hrs)</small></p>
+            <p class="card-text">{{ item.content }}</p>
+            {% if item.author == user %}
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'event-update' item.id %}" type="submit">Update Event</a>
+            <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'event-delete' item.id %}" type="submit">Delete Event</a>
+            {% elif user.is_authenticated and user in item.waiting_participant.all %}
+            <p class="article-content" style="color: green"><small>You have already applied for this event and your application is waiting.</small> </p>
+            {% elif user.is_authenticated and user in item.current_participant.all %}
+            <p class="article-content" style="color: green"><small>You have already enrolled for this event.</small></p>
+            {% elif user.is_authenticated and item.num_participant >= item.max_participant %}
+            <p class="article-content" style="color: red">This event has already reached its limit and does not accept new applications.</p>
+            {% elif user.is_authenticated %}
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'event-apply' item.id %}" type="submit">Apply</a>
+            {% else %}
+            <p class="article-content" style="color: red">You need to login to apply for an event.</p>
+            {% endif %}
+          </div>
         </div>
       </div>
-    </div>
-    </br>
-  {% elif item.get_type == "event" %}
-    <div class="card-deck">
-      <div class="card">
-    <!--     <img class="card-img-top" src="{{ post.image.url }}" alt="image"> -->
-        <div class="card-body">
-          <h5 class="card-title"><a class="article-title" href="{% url 'event-detail' item.id %}">{{ item.title }}</a></h5> 
-          <p class="card-text"><small class="text-muted">Location: {{ item.location }} &emsp; Date: {{ item.date }}</small></p>
-          <!-- <span id="dots">...</span><span id="more"></span>
-          <button onclick="myFunction()" id="myBtn">...</button> -->
-          <p class="card-text">{{ item.content }}</p>
-          {% if item.author == user %}
-          <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'event-update' item.id %}" type="submit">Update Event</a>
-          <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'event-delete' item.id %}" type="submit">Delete Event</a>
-          {% elif user.is_authenticated and user in item.waiting_participant.all %}
-          <p class="article-content" style="color: green"><small>You have already applied for this event and your application is waiting.</small> </p>
-          {% elif user.is_authenticated and user in item.current_participant.all %}
-          <p class="article-content" style="color: green"><small>You have already enrolled for this event.</small></p>
-          {% elif user.is_authenticated %}
-          <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'event-apply' item.id %}" type="submit">Apply</a>
-          {% else %}
-          <p class="article-content" style="color: red">You need to login to apply for an event.</p>
-          {% endif %}
-        </div>
-      </div>
-    </div>
-    </br>
-  {% endif %}
-{% endfor %}
-
+      </br>
+    {% endif %}
+  {% endfor %}
+{% endif %}
 <!--Home Page Pagination-->
 {% if is_paginated %}
 
@@ -95,40 +106,3 @@
 
 {% endif %}
 {% endblock content %}
-
-
-<!--
-{% block request %}
-{% for request in requests %}
-  <article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ request.author.profile.image.url }}">
-    <div class="media-body">
-      <div class="article-metadata">
-        <a class="mr-2" href="#">{{ request.author }}</a>
-        <small class="text-muted">{{ request.date_posted | date:"F d, Y"}}</small>
-        
-      </div>
-      <h2><a class="article-title" href="{% url 'request-detail' post.id %}">{{ request.title }}</a></h2>
-      <p class="article-content">{{ request.content }}</p>
-    </div>
-  </article>
-{% endfor %}
-{% endblock request %}
-
-{% block event %}
-{% for event in events %}
-  <article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ event.author.profile.image.url }}">
-    <div class="media-body">
-      <div class="article-metadata">
-        <a class="mr-2" href="#">{{ event.author }}</a>
-        <small class="text-muted">{{ event.date_posted | date:"F d, Y"}}</small>
-        
-      </div>
-      <h2><a class="article-title" href="{% url 'event-detail' post.id %}">{{ event.title }}</a></h2>
-      <p class="article-content">{{ event.content }}</p>
-    </div>
-  </article>
-{% endfor %}
-{% endblock event %}
--->
