--- a/app/service/templates/service/base/offer_detail_base.html
+++ b/app/service/templates/service/base/offer_detail_base.html
@@ -9,20 +9,20 @@
         <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'offer-update' offer.id %}" type="submit">Update Offer</a>
         <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'offer-delete' offer.id %}" type="submit">Delete Offer</a>
         {% elif user.is_authenticated and user in offer.waiting_participants.all %}
-        <p class="article-content" style="color: green">You have already applied for this service and your application is waiting.</p>
+        <p class="article-content" style="color: green"><small> You have already applied for this service and your application is waiting. </small></p>
         {% elif user.is_authenticated and user in offer.current_participants.all %}
-        <p class="article-content" style="color: green">You have already enrolled for this service. The author will be paid by timecredits after you and the offerer submit the feedback.</p>
+        <p class="article-content" style="color: green"><small> You have already enrolled for this service. The author will be paid by timecredits after you and the offerer submit the feedback.</small></p>
             {% if user.username not in offer.feedback_senders %}
             <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'feedback-create' offer.id offer.author.username %}" type="submit">Submit Feedback</a>
             {% else %}
             You have already submitted a feedback for this service. 
             {% endif %}
         {% elif user.is_authenticated and user in offer.finished_participants.all %}
-        <p class="article-content" style="color: green">You already used this service and the service is now completed.</p>
+        <p class="article-content" style="color: green"><small>You already used this service and the service is now completed.</small></p>
         {% elif user.is_authenticated and user.profile.timecredit < offer.timecredit %}
-        <p class="article-content" style="color: red">You need at least {{offer.timecredit}} timecredit, but you have {{user.profile.timecredit}} timecredit available.</p>
+        <p class="article-content" style="color: red"><small>You need at least {{offer.timecredit}} timecredit, but you have {{user.profile.timecredit}} timecredit available.</small> </p>
         {% elif user.is_authenticated and offer.num_participants >= offer.max_participants %}
-        <p class="article-content" style="color: red">This offer has already reached its limit and does not accept new applications.</p>
+        <p class="article-content" style="color: red"><small>This offer has already reached its limit and does not accept new applications.</small></p>
         {% elif user.is_authenticated %}
         <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'offer-apply' offer.id %}" type="submit">Apply</a>
         {% else %}
@@ -55,9 +55,17 @@
         
         {% else %}
         <hr />
+        <p></p>
+            <h5>Waiting Participants</h5>
+            {% for participant in offer.waiting_participants.all %}
+                <p class="article-content" style="color: darkorange; font-size:small">{{participant.username}}</p>
+            {% empty %}
+            <p class="article-content" style="color: darkblue; font-size:small">There is no waiting participant yet.</p>
+            {% endfor %}
+            <hr />
         <h5>Current Participants</h5>
             {% for participant in offer.current_participants.all %}
-                <p class="article-content" style="color: darkorange; font-size:small">{{participant.username}} {% if participant.username not in offer.feedback_receivers %}<a class="" href="{% url 'feedback-create' offer.id participant.username %}" type="submit">(Submit Feedback)</a> {% else %} (Already submitted feedback) {% endif %}</p>
+                <p class="article-content" style="color: darkorange; font-size:small">{{participant.username}}</p>
             {% empty %}
             <p class="article-content" style="color: darkblue; font-size:small">There is no current participant yet.</p>
             {% endfor %}
