--- a/app/service/templates/service/event_list.html
+++ b/app/service/templates/service/event_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% for event in events %}
-  {% include "service/event_detail.html" %}
+  {% include "service/eventdetail.html" %}
 {% empty %}
   <p class="article-content" style="color: darkred; font-size:small">There is no event on this page right now.</p>
 {% endfor %}
