--- a/app/service/templates/service/post_detail.html
+++ b/app/service/templates/service/post_detail.html
@@ -3,6 +3,7 @@
 {% block content %}
 
 <article class="media content-section">
+    <!-- <img class="rounded article-img " src="{{ object.image.url }}"  width="300" height="300"> -->
     <div class="media-body">
         <h2 class="article-title">{{ object.title }}</h2>
         <p class="article-content"> <small class="text-muted">Location: {{ object.location }} &emsp; Date: {{ object.date }} &emsp; Time: {{ object.time }} ({{ object.duration }} hrs)</small></p> 
