--- a/app/service/templates/service/post_list.html
+++ b/app/service/templates/service/post_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% for post in posts %}
-  {% include "service/post_detail.html" %}
+  {% include "service/postdetail.html" %}
 {% empty %}
   <p class="article-content" style="color: darkred; font-size:small">There is no request on this page right now.</p>
 {% endfor %}
