--- a/app/service/templates/service/post_form.html
+++ b/app/service/templates/service/post_form.html
@@ -1,13 +1,18 @@
 {% extends 'service/base.html' %}
 {% load crispy_forms_tags %}
+<!-- <head>
+    <script type="text/javascript" src="/static/js/form.js"></script>
+    {{form.media}}
+</head> -->
+
 
 {% block content %}
 <div class="content-section">
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Request a Service</legend>
-            {{ form | crispy }}
+            {{ form | crispy }}           
         </fieldset>
         <div class="form-group">
             <button class="btn btn-outline-info" type="submit">Post</button>
